[package]
name = "franklin-wh"
version = "0.1.0"
edition = "2021"
description = "Rust wrapped for the Franklin WH home power system"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
